cmake_minimum_required(VERSION 3.10.0)
project(logtext)

set(EXECUTABLE_OUTPUT_PATH ${outpath})
link_directories(${lib_path})
link_libraries(log)
link_directories(${lib_path})
link_libraries(muduotext)
find_package(Threads)
include_directories(${loger})
include_directories(${resou})
aux_source_directory(${PROJECT_SOURCE_DIR} logout)
add_executable(loger ${logout})
target_link_libraries(loger ${CMAKE_THREAD_LIBS_INIT})